--- a/theme/templates/register.html
+++ b/theme/templates/register.html
@@ -3,7 +3,7 @@
 {% block title %}Registration{% endblock %}
 
 {% block content %}
-<div class="min-h-screen flex items-center justify-center bg-gray-900 text-gray-100 py-12 px-4 sm:px-6 lg:px-8">
+<div class=" flex justify-center bg-gray-900 text-gray-100 py-12 px-4 sm:px-6 lg:px-8">
   <div class="max-w-md w-full space-y-8 bg-gray-800 p-8 rounded-xl shadow-lg">
     <h2 class="mt-6 text-center text-3xl font-extrabold">Registration</h2>
 
