--- a/theme/templates/login.html
+++ b/theme/templates/login.html
@@ -2,28 +2,26 @@
 {% load custom_tags %}
 
 {% block content %}
-<div class="max-w-md mx-auto mt-10 bg-black shadow-md rounded px-8 pt-6 pb-8 text-white">
+<div class="max-w-md mx-auto mt-10 bg-gray-800 shadow-md rounded px-8 pt-6 pb-8 text-white">
   <h2 class="text-2xl font-bold mb-6 text-center">Log In</h2>
 
   <form method="post">
     {% csrf_token %}
 
-    {% if form.non_field_errors %}
-      <div class="bg-red-500 text-white p-2 rounded mb-4">
-        {% for error in form.non_field_errors %}
-          <p>{{ error }}</p>
-        {% endfor %}
-      </div>
-    {% endif %}
-
     <div class="mb-4">
       <label for="{{ form.username.id_for_label }}" class="block text-white font-bold">Email:</label>
       {{ form.username|add_class:"w-full px-3 py-2 rounded bg-white text-black" }}
+      {% if form.username.errors %}
+        <p class="text-red-400 text-xl mt-1">{{ form.username.errors.0 }}</p>
+      {% endif %}
     </div>
 
     <div class="mb-6">
       <label for="{{ form.password.id_for_label }}" class="block text-white font-bold">Password:</label>
       {{ form.password|add_class:"w-full px-3 py-2 rounded bg-white text-black" }}
+      {% if form.password.errors %}
+        <p class="text-red-400 text-sm mt-1">{{ form.password.errors.0 }}</p>
+      {% endif %}
     </div>
 
     <button type="submit" class="bg-blue-500 hover:bg-blue-600 text-white font-bold py-2 px-4 rounded">
