--- a/theme/templates/partials/head.html
+++ b/theme/templates/partials/head.html
@@ -6,6 +6,9 @@
     <link rel="icon" type="image/png" href="{% static 'favicon.png' %}">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
+    <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
+
     {% tailwind_css %}
   </head>
   <body class="bg-gray-900 font-serif leading-normal tracking-normal text-white h-full">
