--- a/theme/templates/partials/navbar.html
+++ b/theme/templates/partials/navbar.html
@@ -6,22 +6,23 @@
       <div class="text-lg flex">
         <a href="/"><img src="{% static 'urlesson.png' %}" class="w-64 h-[auto] -mb-16 -mt-8" alt="urlesson"></a>
       </div>
-      <a href="{% url 'user_list' %}" class="hover:underline ml-8 px-4 py-8 text-3xl underline">Users</a>
       {% if user.is_authenticated %}
+      <a href="{% url 'user_list' %}" class="hover:underline ml-8 px-4 py-8 text-3xl underline">Users</a>
       <a href="{% url 'calendar' %}" class="hover:underline ml-2 px-4 py-8 text-3xl underline">Calendar</a>
       {% endif %}
       {% if user.is_teacher %}
         <a href="{% url 'teacher_availability' %}" class="hover:underline ml-2 px-4 py-8 text-3xl underline">Availability</a>
       {% endif %}
     </div>
-
     <div class="flex text-2xl gap-4">
       {% if user.is_authenticated %}
         <a href="{% url 'profile' %}" class="bg-green-500 text-black hover:bg-blue-500 text-3xl px-4 py-2 border-black rounded">My Profile</a>
         <a href="{% url 'logout' %}" class="bg-yellow-500 hover:bg-red-500 text-black text-3xl px-4 py-2 border-black rounded">Logout</a>
       {% else %}
-        <a href="{% url 'login' %}" class="bg-green-500 text-black hover:bg-blue-500 text-3xl px-4 py-2 border-black rounded">Login</a>
+      <a href="{% url 'login' %}" class="bg-green-500 text-black hover:bg-blue-500 text-3xl px-4 py-2 border-black rounded">Login</a>
+      {% if request.path != '/'%}
         <a href="{% url 'register' %}" class="bg-yellow-500 text-black text-3xl hover:bg-red-500 px-4 py-2 border-black rounded">Register</a>
+      {% endif %}
       {% endif %}
     </div>
   </div>
