--- a/theme/templates/user_list.html
+++ b/theme/templates/user_list.html
@@ -4,14 +4,23 @@
 
 {% block content %}
   <div class="bg-gray-900 text-white py-16 px-32">
-    <!-- buttons student/teacher -->
+    <!-- buttons student/teacher for teacher and student view -->
     <div class="flex">
+    {% if user.role == 'teacher' %}
       <div class="flex text-xl gap-2 font-medium overflow-hidden">
-        <a href="{% url 'user_list' %}">
-          <div class="pt-4 pb-2 px-8 text-4xl font-bold border-b-8 {% if role != 'teacher' and role != 'student' %} border-green-500{% else %}hover:text-gray-300 border-black{% endif %}">
-            All
+        <a href="{% url 'user_list' %}?role=student">
+          <div class="pt-4 pb-2 px-8 text-4xl font-bold border-b-8 {% if role == 'student' %} border-red-600{% else %}hover:text-gray-300 border-black{% endif %}">
+            Students
           </div>
         </a>
+        <a href="{% url 'user_list' %}?role=teacher">
+          <div class="pt-4 pb-2 px-8 text-4xl font-bold border-b-8 {% if role == 'teacher' %} border-yellow-500{% else %}hover:text-gray-300 border-black{% endif %}">
+            Teachers
+          </div>
+        </a>
+      </div>
+    {% else %}
+      <div class="flex text-xl gap-2 font-medium overflow-hidden">
         <a href="{% url 'user_list' %}?role=teacher">
           <div class="pt-4 pb-2 px-8 text-4xl font-bold border-b-8 {% if role == 'teacher' %} border-yellow-500{% else %}hover:text-gray-300 border-black{% endif %}">
             Teachers
@@ -23,8 +32,8 @@
           </div>
         </a>
       </div>
+    {% endif %}
     </div>
-
     <div class="grid grid-cols-4 gap-6 py-16">
   {% for user in object_list %}
     <div class="border rounded-lg p-4 shadow-lg flex flex-col items-start w-full">
