home page updated

--- a/theme/templates/home.html
+++ b/theme/templates/home.html
@@ -30,7 +30,7 @@
     </div>
 </div>
 </div>
-<div class="mt-32 border-b border-gray-500"></div>
+<!-- <div class="mt-32 border-b border-gray-500"></div> -->
 
 </div>
 {% endblock %}
