--- a/theme/templates/partials/head.html
+++ b/theme/templates/partials/head.html
@@ -8,6 +8,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
     <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
-
     {% tailwind_css %}
+    <link rel="stylesheet" href="{% static 'css/dist/custom.css' %}">
   </head>
