--- a/theme/templates/register.html
+++ b/theme/templates/register.html
@@ -9,26 +9,7 @@
 
     <form method="post" class="space-y-6">
       {% csrf_token %}
-      
-      <div>
-        {{ form.email.label_tag }}
-        {{ form.email }}
-      </div>
-
-      <div>
-        {{ form.password1.label_tag }}
-        {{ form.password1 }}
-      </div>
-
-      <div>
-        {{ form.password2.label_tag }}
-        {{ form.password2 }}
-      </div>
-
-      <div>
-        {{ form.role.label_tag }}
-        {{ form.role }}
-      </div>
+      {{ form.as_p }}
 
       <div>
         <button type="submit" class="w-full py-2 px-4 bg-gray-600 hover:bg-gray-700 text-white font-bold rounded">
