Changed database(postgres)/created accounts app

--- a/theme/templates/home.html
+++ b/theme/templates/home.html
@@ -4,7 +4,7 @@
 <div class="px-32 py-24">
 <div class="text-center text-7xl">
     <p class="leading-[82px] tracking-[4.5px] mb-16 text-gray-200 font-medium">Learn where you want,<br> with whoever you<br>want</p>
-    <a href="{% url 'register' %}" class="bg-gray-700 text-black text-5xl hover:bg-blue-700 hover:text-black px-12 py-6 border-black rounded">Sign Up</a>
+    <a href="{% url 'accounts:register' %}" class="bg-gray-700 text-black text-5xl hover:bg-blue-700 hover:text-black px-12 py-6 border-black rounded">Sign Up</a>
 </div>
 <div class="mt-32 border-b border-gray-500"></div>
 <div class="text-center text-7xl">
