--- a/theme/templates/teacher_list.html
+++ b/theme/templates/teacher_list.html
@@ -39,7 +39,7 @@
             View details
           </a>
         {% else %}
-          <a href="{% url 'login' %}" class="mt-2 inline-block px-4 py-2 bg-blue-600 text-white rounded">
+          <a href="{% url 'accounts:login' %}" class="mt-2 inline-block px-4 py-2 bg-blue-600 text-white rounded">
             Log In for more options
           </a>
         {% endif %}
