--- a/theme/templates/partials/navbar.html
+++ b/theme/templates/partials/navbar.html
@@ -17,11 +17,16 @@
     <div class="flex text-2xl gap-4">
       {% if user.is_authenticated %}
         <a href="{% url 'profile' %}" class="bg-green-500 text-black hover:bg-blue-500 text-3xl px-4 py-2 border-black rounded">My Profile</a>
-        <a href="{% url 'logout' %}" class="bg-yellow-500 hover:bg-red-500 text-black text-3xl px-4 py-2 border-black rounded">Logout</a>
+        <form action="{% url 'accounts:logout' %}" method="post" class="inline">
+            {% csrf_token %}
+            <button type="submit" class="bg-yellow-500 hover:bg-red-500 text-black text-3xl px-4 py-2 border-black rounded">
+                Logout
+            </button>
+        </form>
       {% else %}
-      <a href="{% url 'login' %}" class="bg-green-500 text-black hover:bg-blue-500 text-3xl px-4 py-2 border-black rounded">Login</a>
+      <a href="{% url 'accounts:login' %}" class="bg-green-500 text-black hover:bg-blue-500 text-3xl px-4 py-2 border-black rounded">Login</a>
       {% if request.path != '/'%}
-        <a href="{% url 'register' %}" class="bg-yellow-500 text-black text-3xl hover:bg-red-500 px-4 py-2 border-black rounded">Register</a>
+        <a href="{% url 'accounts:register' %}" class="bg-yellow-500 text-black text-3xl hover:bg-red-500 px-4 py-2 border-black rounded">Register</a>
       {% endif %}
       {% endif %}
     </div>
