--- a/theme/templates/partials/navbar.html
+++ b/theme/templates/partials/navbar.html
@@ -10,7 +10,7 @@
         <a href="{% url 'teacher_list' %}" class="hover:underline ml-8 px-4 py-8 text-3xl underline">Teachers</a>
       {% endif %}
       {% if user.is_authenticated %}
-      <a href="{% url 'calendar' %}" class="hover:underline ml-2 px-4 py-8 text-3xl underline">Calendar</a>
+      <a href="{% url 'teacher_availability' %}" class="hover:underline ml-2 px-4 py-8 text-3xl underline">Calendar</a>
       {% endif %}
       {% if user.is_teacher %}
         <a href="{% url 'teacher_availability' %}" class="hover:underline ml-2 px-4 py-8 text-3xl underline">Availability</a>
