--- a/theme/templates/book_lesson.html
+++ b/theme/templates/book_lesson.html
@@ -28,12 +28,18 @@
     const calendar = new FullCalendar.Calendar(calendarEl, {
         initialView: 'timeGridWeek',
         allDaySlot: false,
-        slotMinTime: '00:00:00',
-        slotMaxTime: '24:00:00',
+        slotMinTime: '06:00:00',
+        slotMaxTime: '22:00:00',
+        timeZone: 'UTC',
         height: 'auto',
         events: {
             url: "{% url 'lesson_calendar_json' %}",
             extraParams: { teacher_id: "{{ teacher.id }}" }
+        },
+        slotLabelFormat: {
+            hour: '2-digit',
+            minute: '2-digit',
+            hour12: false
         },
         dateClick: function(info) {
         },
