--- a/theme/templates/calendar.html
+++ b/theme/templates/calendar.html
@@ -15,6 +15,7 @@
           Add availability
         </button>
       </form>
+      
       {% if recurring_form.errors %}
       <div class="text-red-600">
         {{ recurring_form.errors }}
@@ -39,7 +40,9 @@ document.addEventListener('DOMContentLoaded', function () {
     selectable: true,
     height: 'auto',
     scrollTime: '08:00:00',
-    timeZone: 'UTC',  // <-- ważne!
+    slotMinTime: '06:00:00',
+    slotMaxTime: '22:00:00',
+    timeZone: 'UTC',
     headerToolbar: {
       left: 'prev,next today',
       center: 'title',
@@ -66,7 +69,7 @@ document.addEventListener('DOMContentLoaded', function () {
           "X-CSRFToken": csrftoken
         },
         body: JSON.stringify({
-          start: info.start.toISOString(),  // wysyłamy UTC
+          start: info.start.toISOString(), 
           end: info.end.toISOString(),
           teacher_id: "{{ teacher.id }}"
         })
