--- a/theme/templates/partials/head.html
+++ b/theme/templates/partials/head.html
@@ -8,6 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
     <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" />
     {% tailwind_css %}
     <link rel="stylesheet" href="{% static 'css/dist/custom.css' %}">
   </head>
